# txt_parser

./: CMakeLists.txt  Person.cpp  Person.h  README.md  main.cpp  student_file_1.txt
Common/: CMakeLists.txt  Person.cpp  Person.h
client/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  README.md  main.cpp
